# atm-banking

./: .dockerignore  .env.dev  .env.local  .env.remote  .env.remote.template  .env.template  .gitignore  Dockerfile.main  Dockerfile.migrations  Dockerfile.web  LICENSE  README.md  __main__.py  __main_api__.py  __main_cli__.py  alembic.ini  alter_main.py  config_template.toml  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.remote.yml  nginx.conf  pyproject.toml  requirements.txt  runner.py  runner_remote.py  temporary.py
app/presentation/: api_runner.py  cli_runner.py
application/: settings.py
application/dto/: base.py  operation.py
application/exceptions/: __init__.py  account.py  customer.py
application/operation_handlers/: base.py  deposit_usecase.py
application/operation_mediator/: __init__.py  operation_mediator.py
application/services/: __account_service.py  __base_service.py  __customer_service.py  __init__.py  __operation_service.py  _base_service.py  account_service.py  customer_service.py  data_converter.py  deposit_service.py  operation_service.py
application/usecases/: __init__.py  _base_usecase.py  _deposit.py  bank_statement.py  bank_statement_usecase.py  base.py  deposit.py  deposit_usecase.py  usecase_manager.py  withdraw.py  withdraw_usecase.py
atm/: __main__.py  __runner_remote__.py
atm/presentation/: api_runner.py  cli_runner.py
atm_banking/presentation/: api_runner.py  cli_runner.py
cli/: input_parser.py  service.py
cli/not_actual/: parser_config.py  run_cli.py
common/: constants.py  uow.py
common/alembic/: env.py
common/database/: core.py  db_models.py  dto_models.py  repository.py
common/repositories/: account_repository.py  base_conn.py  base_repository.py  customer_repository.py
common/services/: __init__.py  _base_service.py  account_service.py  alt_account.py  alt_customer.py  customer.py  customer_service.py  deposit.py  operation_service.py  withdraw.py
common/unit_of_work/: __init__.py  uow.py
common/usecases/: DepositUseCase.py  deposit.py
infrastructure/alembic/: env.py
infrastructure/config/: app_config.py  db_config.py
infrastructure/database/: core.py  db_config.py  db_core.py
infrastructure/di/: builder.py  container.py
infrastructure/mediator/: __init__.py  mediator.py
infrastructure/provider/: __init__.py  provider.py
infrastructure/unit_of_work/: __init__.py  uow.py
logs/: .gitignore  operations.txt
presentation/api/: DIContainer.py  __run__.py  di_analysis.py  main.py
presentation/cli/: cli_app.py  constants.py  input_parser.py  run.py
temp_files/: Dockerfile.main  Dockerfile.main_alt_2  Dockerfile.main_alt_3
unused/: Dockerfile.migrations_un  Dockerfile.web_un  _un_app.py  api_runner_lifespan_usage.py  db_config.py  docker-compose.dev.yml
(+341 files in other folders)
