[tool.poetry]
name = "atm-banking"
version = "0.1.0"
description = ""
authors = ["Shiiq <anjunatown@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.20"
alembic = "^1.10.3"
aiosqlite = "0.*"
asyncpg = "^0.28.0"
pydantic = {extras = ["settings"], version = "^2.0.2"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
di = {extras = ["anyio"], version = ">0.75.3, <1.0.0"}
pydantic-settings = "^2.0.1"
gunicorn = "^21.2.0"
fastapi = "^0.104.0"


[tool.poetry.group.migrations.dependencies]
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
aiosqlite = "^0.19.0"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
