[tool.poetry]
name = "ATMBanking"
version = "0.1.0"
description = ""
authors = ["Shiiq <anjunatown@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.10.3"
aiosqlite = "0.*"
asyncpg = "^0.29.0"
pydantic = {extras = ["settings"], version = "^2.0.2"}
uvicorn = {extras = ["standard"], version = "^0.24.0"}
di = {extras = ["anyio"], version = ">0.75.3, <1.0.0"}
pydantic-settings = "^2.0.1"
gunicorn = "^21.2.0"
fastapi = "^0.104.0"


[tool.poetry.group.migrations.dependencies]
alembic = "^1.12.0"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
